CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(analyze_pointcloud)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)


# SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -pthread")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/third_party/eigen3
    ${PROJECT_SOURCE_DIR}/third_party/KD_tree
)

ADD_SUBDIRECTORY(PCA_Downsample)
ADD_SUBDIRECTORY(Nearest_Neighbors)
ADD_SUBDIRECTORY(Clustering)
ADD_SUBDIRECTORY(Fitting)

ADD_SUBDIRECTORY(test)

ADD_SUBDIRECTORY(third_party/KD_tree/KD_tree)